--- a/ecom-frontend/package.json
+++ b/ecom-frontend/package.json
@@ -15,7 +15,9 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-inner-image-zoom": "^4.0.1",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
